[build-system]
build-backend = "mesonpy"
requires = [
        "meson-python",
        "oldest-supported-numpy",
        "numpy!=1.22.0",
        "mako"]

[project]
name = "pyfmmlib"
version = "2023.1"
description = "Python wrappers for particle FMMs"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
  {name = "Leslie Greengard"},
  {name = "Zydrunas Gimbutas"},
  {name = 'Andreas Kloeckner', email="inform@tiker.net"},
]
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Intended Audience :: Other Audience",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "License :: OSI Approved :: BSD License",
        "Programming Language :: Fortran",
        "Programming Language :: Python",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Mathematics",
        "Topic :: Software Development :: Libraries",
        ]
license = "wrapper: MIT/code: 3-clause BSD"

[project.urls]
homepage = "https://github.com/inducer/pyfmmlib"
