[build-system]
build-backend = "mesonpy"
requires = [
    "mako",
    "meson-python",
    "numpy",
    "wheel",
]

[project]
name = "pyfmmlib"
version = "2024.2"
description = "Python wrappers for particle FMMs"
readme= "README.rst"
license = "MIT AND BSD-3-Clause"
maintainers = [{ name = "Andreas Kloeckner", email = "inform@tiker.net" }]
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" },
    { name = "Leslie Greengard" },
    { name = "Zydrunas Gimbutas" },
    { name = "Alex Fikl", email = "alexfikl@gmail.com" },
    ]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Programming Language :: Fortran",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
doc = [
    "furo",
    "sphinx>=4",
    "sphinx-copybutton",
]
test = [
    "mako",
    "pytest",
    "ruff",
]

[project.urls]
Repository = "https://github.com/inducer/pyfmmlib"

[tool.ruff.lint]
preview = true
extend-select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "G",    # flake8-logging-format
    "I",    # flake8-isort
    "N",    # pep8-naming
    "NPY",  # numpy
    "PLE",  # pylint error
    "Q",    # flake8-quotes
    "RUF",  # ruff
    "UP",   # pyupgrade
    "W",    # pycodestyle
]
extend-ignore = [
    "C90",  # McCabe complexity
    "E226", # missing whitespace around arithmetic operator
    "E241", # multiple spaces after comma
    "E242", # tab after comma
    "E265", # block comment should start with #
    "E402", # module level import not at the top of file
    "RUF067",   # non-empty-init-module
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
known-local-folder = ["pyfmmlib"]
lines-after-imports = 2
combine-as-imports = true

[tool.cibuildwheel]
skip = ["cp31?t-*"]
